--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,15 @@
     <input id="user" value="ユーザー名を記入"/>
     <button type="button" onclick="fill_profile()">Go</button>
 
-    <br>プロフィール情報
+    <h2>プロフィール情報</h2>
     <table border="1" width="400" id="profile"></table>
-
     <div id="data_select"></div>
 
-    <br>→なんかグラフが表示される
-    <br>fitbit データ
+    <h2>グラフ</h2>
+    <canvas id="graph" width="300" height="200"></canvas>
+     <!-- style="border:1px solid #000000;" -->
+
+    <h2>データ</h2>
     <table border="1" width="300" id="data"></table>
   </body>
 </html>
