--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,8 @@
     <h2>プロフィール情報</h2>
     <table border="1" width="400" id="profile"></table>
     <div id="data_select"></div>
+    <!--編集 id設置-->
+    <div id="profile_change"></div>
 
     <h2>グラフ</h2>
     <canvas id="graph" width="300" height="200"></canvas>
